# DocAgent

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md
backend/: main.py  pyproject.toml
backend/api/: chat.py  reset.py  upload.py
backend/core/: config.py
backend/models/: chunk.py  document.py  embedding.py  search.py
backend/prompts/: qa_template.txt
backend/services/: chunker.py  embedder.py  llm.py  parser.py  pipeline.py  prompt_builder.py  retriever.py  vector_store.py
backend/utils/: response.py
docs/: 02_AI_CODING_SPEC.md  03_TASK.md  04_DEV_LOG.md
frontend/: package-lock.json
frontend/src/: App.vue  style.css
frontend/src/pages/: ChatPage.vue  HomePage.vue
frontend/src/router/: index.js
