[project]
name = "docagent"
version = "0.1.0"
description = "AI Document Assistant - RAG-based PDF Q&A system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    "sentence-transformers>=5.6.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]
